# generative-ai-with-deploy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chat-models/google-gemini/: chat-with-class-usage-with-options.py  chat-with-class-usage.py  chat.py
chat-models/groq/: chat-with-class-usage-with-options.py  chat-with-class-usage.py  chat.py
chat-models/hugging-face/: chat-download-local.py  chat-with-class-usage-with-options.py  chat-with-class-usage.py  local-model.py
chat-models/mistral-ai/: chat-with-class-usage-with-options.py  chat-with-class-usage.py  chat.py
chat-models/open-ai/: chat-with-class-usage-with-options.py  chat-with-class-usage.py  chat.py
chatbot/: chatbot-manual-input-ui.py  chatbot-simple-prompt.py  chatbot-system-user-prompt-manual-input.py  chatbot-system-user-prompt.py  chatbot-ui.py
embedding-models/hugging-face/: embeddings-download-local.py
embedding-models/open-ai/: embeddings-documents.py  embeddings-query.py
project/SwapAnalytics/prompt-templates/: app.py  core.py
project/SwapAnalytics/prompt-templates-with-schema/: app.py  core.py
prompt-templates/: movie-info-extractor.py
