[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-ai-with-deploy"
version = "0.1.0"
description = "A generative AI project with deploy support."
readme = "README.md"
authors = [
    { name = "Unknown" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.27",
]

[project.urls]
Home = "https://example.com/"
